# practic3-app

./: .gitignore  api.md  index.html  package.json  tsconfig.app.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: App.tsx  main.tsx
src/components/Layout/: Layout.module.less  Layout.tsx
src/components/Navigation/: Navigation.module.less  Navigation.tsx
src/components/inputs/ActionButtons/: ActionButtons.module.less  ActionButtons.tsx
src/components/inputs/Button/: Button.module.less  Button.tsx
src/components/inputs/EditCard/: EditCard.module.less  EditCard.tsx  index.ts
src/components/inputs/EditField/: EditField.module.less  EditField.tsx
src/components/inputs/FileLink/: FileLink.module.less  FileLink.tsx  index.ts
src/components/inputs/PageHeader/: PageHeader.module.less  PageHeader.tsx
src/components/inputs/Section/: Section.module.less  Section.tsx
src/components/inputs/TextInput/: TextInput.module.less  TextInput.tsx
src/components/pages/CertificatesPage/: CertificatesPage.module.less  CertificatesPage.tsx
src/components/pages/EducationPage/: EducationPage.module.less  EducationPage.tsx  index.ts
src/components/pages/IndexPage/: IndexPage.tsx
src/components/pages/InfoPage/: InfoPage.module.less  InfoPage.tsx
src/consts/: length.ts  messages.ts
src/schemas/: auth.ts  string.ts
src/styles/: index.less
src/styles/utils/: placeholders.less
src/types/: info.ts  options.ts
src/utils/exception/: ExceptionUtils.ts
src/utils/fetch/: AuthUtils.ts  FetchUtils.ts
src/utils/hooks/: hooks.ts
(+8 files in other folders)
